--- a/force-app/main/default/classes/ContactController.cls
+++ b/force-app/main/default/classes/ContactController.cls
@@ -1,10 +1,10 @@
 public with sharing class ContactController {
-    @AuraEnabled
+@AuraEnabled
     public static List<Contact> getContacts() {
-        List<Contact> contacts = [SELECT Id, Name, MailingStreet, Phone, Email, LeadSource FROM Contact];
+        List<Contact> contacts =
+                [SELECT Id, Name, MailingStreet, Phone, Email, LeadSource FROM Contact];
 
         //Add isAccessible() check
         return contacts;
-
     }
 }
